fix issue with div spacing for wistia videos

--- a/blog/blog.less
+++ b/blog/blog.less
@@ -99,6 +99,10 @@
                         letter-spacing: 0.005em;
                     }
                 }
+                [class*="wistia"],
+                [class*="wistia"] div {
+                    margin: 0;
+                }
             }
 
             .post-summary, .post-cta {
